--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>FontAwesome</title>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"> -->
-    
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.33/vue.cjs.js"> -->
 </head>
 
@@ -30,14 +30,14 @@
     <i class="fa-solid fa-feather fa-3x"></i>
     <br>
 
-    <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-    <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-    <a href="https://www.whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
-    <a href="https://www.pinterest.com"><i class="fa-brands fa-pinterest"></i></a>
-    <a href="https://github.com"><i class="fa-brands fa-github"></i></a>
-    <a href="https://www.spotify.com/in-en/"><i class="fa-brands fa-spotify"></i></a>
-    <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+    <a href="https://twitter.com" aria-label="twitter"><i class="fa-brands fa-twitter"></i></a>
+    <a href="https://www.instagram.com" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://www.facebook.com" aria-label="facebook"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.whatsapp.com" aria-label="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
+    <a href="https://www.pinterest.com" aria-label="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+    <a href="https://github.com" aria-label="github"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.spotify.com/in-en/" aria-label="spotify"><i class="fa-brands fa-spotify"></i></a>
+    <a href="https://www.youtube.com/" aria-label="youtube"><i class="fa-brands fa-youtube"></i></a>
 </body>
 
 </html>
